# jira-mcp-snowflake

./: .containerignore  .dockerignore  .flake8  .gitignore  Containerfile  Makefile  README.md  codecov.yml  config.py  database.py  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: python-development.mdc  test-coverage.mdc
.github/workflows/: python-lint.yaml  test.yml
.tekton/: jira-mcp-snowflake-pull-request.yaml  jira-mcp-snowflake-push.yaml
fakesnow/: Containerfile  README.md  requirements.txt  wrapper.py
jira_mcp_snowflake/: __init__.py
jira_mcp_snowflake/src/: __init__.py  api.py  database.py  main.py  mcp.py  metrics.py  settings.py
jira_mcp_snowflake/src/tools/: __init__.py  jira_tools.py
jira_mcp_snowflake/utils/: __init__.py  pylogger.py
openshift/: template.yaml
src/: config.py  database.py  mcp_server.py  metrics.py  tools.py
tests/: test_api.py  test_config.py  test_database.py  test_database_comprehensive.py  test_database_focused.py  test_jira_tools.py  test_main.py  test_mcp_init.py  test_mcp_server.py  test_metrics.py  test_metrics_comprehensive.py  test_pylogger.py  test_settings.py  test_tools.py
