[project]
name = "jira-mcp-snowflake"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides access to JIRA issue data stored in Snowflake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]==0.28.1",
    "mcp==1.26.0",
    "prometheus_client==0.24.0",
    "cachetools==7.0.0",
    "asyncio-throttle==1.0.2",
    "snowflake-connector-python>=3.12.0",
]

[project.scripts]
jira-mcp-snowflake = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "flake8>=7.3.0",
    "requests>=2.32.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.2.1",
] 
